# lead-gen-agent

./: .env.example  .gitignore  BUGLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY_SCORE_ASSESSMENT.md  WORKSPACES.md  _commit.bat  agent.py  connect_whatsapp.py  handoff.md  main.py  pyproject.toml  requirements-pinned.txt  requirements.txt  start.bat
.github/workflows/: ci.yml
config/: agency_profile.json  compliance_rules.json  global_holidays.json  global_targeting.json  prospect_preferences.json  whatsapp_templates.json
scripts/: agent_workspace.sh  precommit_check.py
src/: __init__.py  ai_client.py  analytics.py  config.py  database.py  logging_setup.py  whatsapp_bot.py
src/compliance/: compliance_handler.py
src/db/: migrate.py
src/language/: lang_handler.py
src/outreach/: email_generator.py  email_response_handler.py  email_sender.py  response_handler.py
src/reports/: daily_summary.py
src/scheduling/: timezone_scheduler.py
src/scoring/: icp_scorer.py
src/scrapers/: apollo_scraper.py  github_scraper.py  linkedin_scraper.py  producthunt_scraper.py  prospect_scraper.py
src/security/: __init__.py  csrf.py  gdpr.py  html_sanitizer.py  log_integrity.py  network.py  pii_redactor.py  secrets_manager.py  sql_builder.py  tls_config.py
src/tracking/: server.py  tracker.py
src/utils/: __init__.py  api_usage.py  delays.py  proxy_manager.py  rate_limiter.py  validators.py
src/whatsapp/: whatsapp_api.py
tests/: test_decision_engine.py  test_integration.py  test_regressions.py
