[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-gen-agent"
version = "1.5.0"
description = "AI-powered outbound sales automation — prospect discovery, lead scoring, multi-channel outreach, and intelligent reply handling."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "TheSpideyBro" },
]
keywords = [
    "lead-generation",
    "sales-automation",
    "outreach",
    "ai",
    "whatsapp",
    "email-marketing",
    "linkedin",
    "groq",
    "asyncio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Marketing",
    "Intended Audience :: Sales",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Sales Automation",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "aiosqlite>=0.19.0",
    "openai>=1.10.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "fpdf2>=2.7.0",
    "matplotlib>=3.8.0",
    "apscheduler>=3.10.0",
    "playwright>=1.40.0",
    "phonenumbers>=8.13.0",
    "pytz>=2024.1",
    "pycountry>=23.12.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pyflakes>=3.0.0",
    "ruff>=0.3.0",
]
lint = [
    "ruff>=0.3.0",
    "pyflakes>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/TheSpideyBro/lead-gen-agent"
Documentation = "https://github.com/TheSpideyBro/lead-gen-agent#readme"
Repository = "https://github.com/TheSpideyBro/lead-gen-agent"
"Bug Tracker" = "https://github.com/TheSpideyBro/lead-gen-agent/issues"
Changelog = "https://github.com/TheSpideyBro/lead-gen-agent/blob/main/CHANGELOG.md"

[project.scripts]
lead-gen = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
]
ignore = []

[tool.ruff.isort]
known-first-party = ["src"]
